--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=DuAnTotNghiep_MangXaHoiVaDuLich
+spring.datasource.url= jdbc:sqlserver://localhost:1433;databaseName=MangXaHoi_DuLich1;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = none
+
+server.port=8989
