--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=DuAnTotNghiep_MangXaHoiVaDuLich
+
+# --------  PORT
+server.port	= 8081
+
+# --------  DATABASE
+spring.datasource.url					= jdbc:sqlserver://localhost;databaseName=MangXaHoi_DuLich_beta;encrypt=true;trustServerCertificate=true;
+spring.datasource.username				= sa
+spring.datasource.password				= 123456
+spring.datasource.driverClassName		= com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto			= update
+spring.devtools.livereload.enabled		= true
+spring.jpa.open-in-view					= true
+spring.profiles.active					= dev
+spring.jpa.show-sql						= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.security.enabled=false
