--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=DuAnTotNghiep_MangXaHoiVaDuLich
+
+# --------  PORT
+server.port	= 8081
+
+# --------  DATABASE
+spring.datasource.url					= jdbc:sqlserver://localhost;databaseName=MangXaHoi_DuLich_beta;encrypt=true;trustServerCertificate=true;
+spring.datasource.username				= sa
+spring.datasource.password				= 123
+spring.datasource.driverClassName		= com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect			= org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.dialect	= org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto			= update
+spring.devtools.livereload.enabled		= true
+spring.jpa.open-in-view					= true
+spring.profiles.active					= dev
+spring.jpa.show-sql						= true
+
+# --------  MAIL CONFIG
+spring.mail.host		= smtp.gmail.com
+spring.mail.port		= 587
+spring.mail.username	= minhhuygo012304@gmail.com
+spring.mail.password	= hkvz geuq ypsp xuf
+spring.mail.properties.mail.smpt.auth				= true
+spring.mail.properties.mail.smtp.starttls.enable	= true
